--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.1,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "code"
+name = "pynash_maturin"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
